Locator rewrite initial draft